Contain changes related to the issue with color coding when an instructor or TA views the submitted assignments.

--- a/app/assets/stylesheets/redbox.scss
+++ b/app/assets/stylesheets/redbox.scss
@@ -90,6 +90,7 @@ div#close {
 }
 
 #red {
+    color: #DD3300;
 	height: auto;
 }
 
@@ -98,6 +99,12 @@ div#close {
 }
 
 #blue {
+  color: #0000aa;
+  height:auto;
+}
+
+#brown {
+  color: #986633;
   height:auto;
 }
 
