Fixing existing issues

--- a/app/views/sign_up_sheet/_all_actions.html.erb
+++ b/app/views/sign_up_sheet/_all_actions.html.erb
@@ -44,7 +44,7 @@
             <%= submit_tag  'Set priority', name: nil  %>
             <% end %></td>
           <% elsif (@signup_topic_deadline.nil? || (Time.now < @signup_topic_deadline.due_at)) && 
-          (!@assignment.staggered_deadline? || (Time.now < get_topic_deadline([@assignment.due_dates.find_by(deadline_type_id: 1)], topic.id))) %>
+          (!@assignment.staggered_deadline? || get_topic_deadline([@assignment.due_dates.find_by(deadline_type_id: 1)], topic.id).nil? ||  (Time.now < get_topic_deadline([@assignment.due_dates.find_by(deadline_type_id: 1)], topic.id))) %>
               <td align="center"><%= link_to image_tag('Check-icon.png', :border => 0, :title => 'Signup', :align => 'middle'), :controller=>'sign_up_sheet', :action=> 'sign_up', :id=>params[:id],:topic_id => topic.id, :assignment_id => params[:assignment_id] %></td>
           <% end %>
       <% end %>
